# ble_bluez_hci_apps

./: CMakeLists.txt  README
apps/ble_uart_app/: CMakeLists.txt  readme
apps/ble_uart_app/src/: app_adv.c  app_adv.h  app_agent.c  app_agent.h  app_ble_handler.c  app_ble_handler.h  app_cmd.c  app_cmd.h  app_dbp.c  app_dbp.h  app_error_defs.h  app_gap.h  app_log.h  app_mgmt.c  app_mgmt.h  app_scan.c  app_scan.h  app_sm.c  app_sm.h  app_timer.c  app_timer.h  app_trp_common.c  app_trp_common.h  app_trpc.c  app_trpc.h  app_trps.c  app_trps.h  app_utility.c  app_utility.h  application.c  application.h  main.c
apps/dfu_app/: CMakeLists.txt  readme
apps/dfu_app/src/: app_cmd.c  app_cmd.h  app_hci_dfu.c  app_hci_dfu.h  app_hci_vnd.c  app_hci_vnd.h  app_log.h  app_timer.c  app_timer.h  application.c  application.h  main.c
profiles/ble_trsp/: ble_trsp_defs.h  ble_trspc.c  ble_trspc.h  ble_trsps.c  ble_trsps.h  msc.md
services/ble_trs/: ble_trs.c  ble_trs.h
tools/: main.conf
tools/pattern/: 5k.txt
